@@ -1,9 +1,6 @@
 package com.oryanend.tom_perfeito_api.config;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.autoconfigure.security.servlet.PathRequest;
 import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.context.annotation.Bean;
@@ -29,13 +26,6 @@ import org.springframework.web.filter.CorsFilter;
 @EnableWebSecurity
 @EnableMethodSecurity
 public class ResourceServerConfig {
-
-  @Value("${cors.origins}")
-  private String corsOrigins;
-
-  // make this optional with empty default to avoid missing-placeholder errors in some envs
-  @Value("${app.cors.allowed-origins:}")
-  private String angularOrigin;
 
   @Bean
   @Profile("test")
@@ -74,49 +64,17 @@ public class ResourceServerConfig {
 
   @Bean
   CorsConfigurationSource corsConfigurationSource() {
-    List<String> allowed = getStrings();
     CorsConfiguration corsConfig = new CorsConfiguration();
 
-    if (!allowed.isEmpty()) {
-      corsConfig.setAllowedOriginPatterns(allowed);
-      corsConfig.setAllowedOrigins(allowed);
-    } else {
-      corsConfig.setAllowedOriginPatterns(List.of("*"));
-    }
-
-    corsConfig.setAllowedMethods(Arrays.asList("POST", "GET", "PUT", "DELETE", "PATCH", "OPTIONS"));
+    corsConfig.setAllowedOriginPatterns(List.of("*"));
+    corsConfig.setAllowedMethods(List.of("*"));
+    corsConfig.setAllowedHeaders(List.of("*"));
     corsConfig.setAllowCredentials(true);
-    corsConfig.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "*"));
 
     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
     source.registerCorsConfiguration("/**", corsConfig);
+
     return source;
-  }
-
-  private List<String> getStrings() {
-    List<String> allowed = new ArrayList<>();
-
-    if (corsOrigins != null && !corsOrigins.isBlank()) {
-      String[] origins = corsOrigins.split(",");
-      for (String o : origins) {
-        String trimmed = o.trim();
-        if (!trimmed.isEmpty()) {
-          allowed.add(trimmed);
-        }
-      }
-    }
-
-    if (angularOrigin != null && !angularOrigin.isBlank()) {
-      String[] ao = angularOrigin.split(",");
-      for (String o : ao) {
-        String trimmed = o.trim();
-        if (!trimmed.isEmpty() && !allowed.contains(trimmed)) {
-          allowed.add(trimmed);
-        }
-      }
-    }
-
-    return allowed;
   }
 
   @Bean
